red background link/submit button fix color contrast

--- a/style/_email.scss
+++ b/style/_email.scss
@@ -76,8 +76,10 @@
             cursor: pointer;
             padding: .65rem;
             border-radius: .25rem;
-            border: 2px solid $soft-red;
-            background: $soft-red;
+            // border: 2px solid $soft-red;
+            border: 2px solid #B40808;
+            // background: $soft-red;
+            background: #B40808;
             color: #fff;
             font-weight: 500;
             font-family: inherit;
@@ -86,7 +88,8 @@
 
             &:hover {
                 background: #fff;
-                color: $soft-red;
+                // color: $soft-red;
+                color: #B40808;
                 transition: .2s;
             }
         }
